eliminacion de emojis del rol de mesa de entrada

--- a/src/templates/administracion/editar_usuario.html
+++ b/src/templates/administracion/editar_usuario.html
@@ -19,7 +19,9 @@
 {% if es_admin_completo %}
 <li><a href="{% url 'administracion:panel_polos' %}">Polos</a></li>
 {% endif %}
+{% if es_admin_completo %}
 <li><a href="{% url 'administracion:estadisticas' %}">Estadísticas</a></li>
+{% endif %}
 <li><a href="{% url 'administracion:panel_asistencia' %}">Asistencias</a></li>
 {% if es_admin_completo %}
 <li><a href="{% url 'administracion:docentes_cursos' %}">Docentes y Cursos</a></li>
@@ -145,8 +147,7 @@
             <button type="submit" class="btn btn-primary">
                 Guardar Cambios
             </button>
-            <a href="{% url 'administracion:gestion_usuarios' %}" class="btn btn-secondary">
-                Cancelar
+            <a href="{% url 'administracion:gestion_usuarios' %}" class="btn btn-secondary">Cancelar
             </a>
         </div>
     </form>
