se corrije la edicion de institucion_educativa por institucion_actual

--- a/src/templates/usuario/editar_perfil.html
+++ b/src/templates/usuario/editar_perfil.html
@@ -171,8 +171,8 @@
                     </select>
                 </div>
                 <div class="form-group">
-                    <label for="institucion_educativa">Institución Educativa</label>
-                    <input type="text" name="institucion_educativa" id="institucion_educativa" value="{{ perfil_adicional.institucion_educativa|default:'' }}" placeholder="Nombre de tu institución">
+                    <label for="institucion_actual">Institución Educativa</label>
+                    <input type="text" name="institucion_actual" id="institucion_actual" value="{{ perfil_adicional.institucion_actual|default:'' }}" placeholder="Nombre de tu institución">
                 </div>
             </div>
         </div>
