--- a/src/templates/usuario/mi_perfil.html
+++ b/src/templates/usuario/mi_perfil.html
@@ -162,7 +162,7 @@
             </div>
             <div class="info-item">
                 <span class="info-label">Institución Educativa</span>
-                <span class="info-value">{{ perfil_adicional.institucion_educativa|default:"No especificado" }}</span>
+                <span class="info-value">{{ perfil_adicional.institucion_actual|default:"No especificado" }}</span>
             </div>
         </div>
     </div>
